[gd_scene load_steps=34 format=2]

[ext_resource path="res://Assets/Characters/laksamana/sprite_026.png" type="Texture" id=1]
[ext_resource path="res://Assets/Characters/laksamana/sprite_027 - Copy.png" type="Texture" id=2]
[ext_resource path="res://Assets/Characters/laksamana/sprite_116.png" type="Texture" id=3]
[ext_resource path="res://Assets/Characters/laksamana/sprite_094.png" type="Texture" id=4]
[ext_resource path="res://Assets/Characters/laksamana/sprite_089.png" type="Texture" id=5]
[ext_resource path="res://Assets/Characters/laksamana/sprite_088.png" type="Texture" id=6]
[ext_resource path="res://Assets/Characters/laksamana/sprite_090.png" type="Texture" id=7]
[ext_resource path="res://Assets/Characters/laksamana/sprite_091.png" type="Texture" id=8]
[ext_resource path="res://Assets/Characters/laksamana/sprite_025.png" type="Texture" id=9]
[ext_resource path="res://src/Actor/Player/Player.gd" type="Script" id=10]
[ext_resource path="res://Assets/Characters/laksamana/sprite_115.png" type="Texture" id=11]
[ext_resource path="res://Assets/particlePack_1.1/PNG (Transparent)/circle_01.png" type="Texture" id=12]
[ext_resource path="res://Assets/Characters/laksamana/sprite_023.png" type="Texture" id=13]
[ext_resource path="res://Assets/Characters/laksamana/sprite_092.png" type="Texture" id=14]
[ext_resource path="res://Assets/Characters/laksamana/sprite_093.png" type="Texture" id=15]
[ext_resource path="res://Assets/Characters/laksamana/sprite_024.png" type="Texture" id=16]
[ext_resource path="res://Assets/Characters/laksamana/sprite_027.png" type="Texture" id=17]
[ext_resource path="res://Assets/Characters/laksamana/sprite_118.png" type="Texture" id=18]
[ext_resource path="res://Assets/Characters/laksamana/sprite_114.png" type="Texture" id=19]
[ext_resource path="res://Assets/Characters/laksamana/sprite_119.png" type="Texture" id=20]
[ext_resource path="res://Assets/Sound/knifesharpener2 (online-audio-converter.com).wav" type="AudioStream" id=21]
[ext_resource path="res://src/UI/GameOver.gd" type="Script" id=22]
[ext_resource path="res://Fonts/PiecesNfi-nYYM.otf" type="DynamicFontData" id=23]
[ext_resource path="res://Assets/UI/TryAgain.png" type="Texture" id=24]
[ext_resource path="res://Assets/UI/Main Menu_pressed.png" type="Texture" id=25]
[ext_resource path="res://Assets/UI/MainMenu.png" type="Texture" id=26]
[ext_resource path="res://Assets/UI/TryAgain_pressed.png" type="Texture" id=27]
[ext_resource path="res://Assets/Sound/SadSong1.ogg" type="AudioStream" id=28]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 12 ) ],
"loop": true,
"name": "dead",
"speed": 24.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 14 ), ExtResource( 8 ), ExtResource( 15 ), ExtResource( 4 ) ],
"loop": true,
"name": "run",
"speed": 8.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 3 ), ExtResource( 18 ), ExtResource( 20 ) ],
"loop": false,
"name": "attack",
"speed": 24.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 16 ), ExtResource( 1 ), ExtResource( 9 ), ExtResource( 2 ), ExtResource( 17 ), ExtResource( 16 ) ],
"loop": false,
"name": "jump",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 130.628, 303.171 )

[sub_resource type="Animation" id=4]
resource_name = "GameOver"
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "Setup"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="DynamicFont" id=6]
size = 180
font_data = ExtResource( 23 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 6.30005, 0 )
scale = Vector2( 0.25, 0.25 )
script = ExtResource( 10 )
__meta__ = {
"_edit_horizontal_guides_": [ 1080.49 ],
"_edit_vertical_guides_": [ 1918.84 ]
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -24.2934, 56.833 )
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
visible = false
position = Vector2( 402.025, 5.51234 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 3980
limit_bottom = 1080
smoothing_speed = 12.0
editor_draw_limits = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 21 )

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../GameOverCanvasLayer")
autoplay = "Setup"
anims/GameOver = SubResource( 4 )
anims/Setup = SubResource( 5 )

[node name="GameOverCanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="GameOverCanvasLayer"]
margin_left = 344.278
margin_top = 206.22
margin_right = 1566.28
margin_bottom = 909.22
color = Color( 0.235294, 0.588235, 0.541176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Control" parent="GameOverCanvasLayer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -424.852
margin_top = -27.0
margin_right = -486.852
margin_bottom = -164.0
script = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="GameOverCanvasLayer/ColorRect/GameOver"]
margin_left = 397.026
margin_top = 12.0
margin_right = 1633.03
margin_bottom = 585.0
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0.85098, 0.0627451, 0.0627451, 1 )
bbcode_enabled = true
bbcode_text = "	
 Game over
"
text = "	
 Game over
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GameOverCanvasLayer/ColorRect/GameOver"]
margin_left = 603.316
margin_top = 449.79
margin_right = 1507.32
margin_bottom = 795.79
custom_constants/separation = 111
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="GameOverCanvasLayer/ColorRect/GameOver/HBoxContainer"]
margin_right = 390.0
margin_bottom = 345.0
texture_normal = ExtResource( 24 )
texture_focused = ExtResource( 27 )

[node name="TextureButton2" type="TextureButton" parent="GameOverCanvasLayer/ColorRect/GameOver/HBoxContainer"]
margin_left = 501.0
margin_right = 891.0
margin_bottom = 345.0
texture_normal = ExtResource( 26 )
texture_focused = ExtResource( 25 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 28 )
[connection signal="gameOver" from="." to="." method="_on_Player_gameOver"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="GameOverCanvasLayer/ColorRect/GameOver/HBoxContainer/TextureButton" to="GameOverCanvasLayer/ColorRect/GameOver" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="GameOverCanvasLayer/ColorRect/GameOver/HBoxContainer/TextureButton2" to="GameOverCanvasLayer/ColorRect/GameOver" method="_on_TextureButton2_pressed"]
